--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-    <title>Test</title>
+    <title>Portfolio - Patrick Marx</title>
 </head>
 
 <body class="font-mono">
@@ -132,13 +132,11 @@
             </div>
         </div>
         <div class='flex flex-col lg:mr-16 lg:items-start items-center'>
-            <a href="./Guessing Game/index.html"><img class="w-96 hover:p-2" src="img/guess.png" alt="me" /></a>
+            <a href="./RandomColor/index.html"><img class="w-96 hover:p-2" src="img/color.png" alt="me" /></a>
             <div class="p-4 midnight">
-                <h2 class="text-green">Guess the Number</h2>
+                <h2 class="text-green">Random Color Picker</h2>
                 <h2 class="font-bold text-xl">HTML / CSS, JavaScript</h2>
-                <p class="mt-4 w-72">Ein kleines Spiel indem man eine Zufällig generierte Nummer findet.</p>
-                <p class="w-72 pt-2">Man gibt die Maximal Nummer ein und muss dann eine Zufällige Nummer erraten.
-                    Hauptsächlich via prompt und in der Console.</p>
+                <p class="mt-4 w-72">Eine kleine App mit der man einfache Farben per Zufall erstellen kann.</p>
                 <div class="icons">
                     <a href="https://github.com/pmarx92/Guess-the-Number"><i class="bi bi-github"></i></a>
                 </div>
