--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <h2 class="font-bold text-xl">HTML / CSS, JavaScript</h2>
                 <p class="mt-4 w-72">Eine kleine App mit der man einfache Farben per Zufall erstellen kann.</p>
                 <div class="icons">
-                    <a href="https://github.com/pmarx92/Guess-the-Number"><i class="bi bi-github"></i></a>
+                    <a href="https://github.com/pmarx92/ColorPicker"><i class="bi bi-github"></i></a>
                 </div>
             </div>
 
