--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <h2 class="flex w-full text-3xl justify-center text-green mb-4">Sie erreichen mich unter:</h2>
                 <span class="text-center mb-6"><span class="text-green text-center font-bold">Patrick Marx</span></span>
                 <span><span class="text-green font-bold font-lg">Telefon:</span> 0176 6050 9409</span>
-                <span><span class="text-green font-bold font-lg">E-Mail:</span> pamarx92@gmail.com</span>
+                <span><span class="text-green font-bold font-lg">E-Mail:</span> <a href="mailto:pamarx92@gmail.com" class="hover:text-green-600"> pamarx92@gmail.com</a></span>
                 <span><span class="text-green font-bold font-lg">Straße:</span> Ostlandstraße 58 </span>
                 <span><span class="text-green font-bold font-lg">Ort:</span> 24340 Eckernförde</span>
             </div>
