--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
         <div class="container-auto midnight text-lg text-green">
             <div class="sm: ml-0 p-0 lg: p-4 ml-0">
                 <ul class="flex flex-col sm:flex-row font-light">
-                    <li class="p-2 hover:text-white sm:px-4 lg:ml-22 2xl:ml-96 hover:underline decoration-4 decoration-green-700"><a href="#aboutMe">About Me</a></li>
-                    <li class="p-2 hover:text-white sm:px-4 lg:ml-14 2xl:ml-20 hover:underline decoration-4 decoration-green-700"><a href="#project">Projekte</a></li>
-                    <li class="p-2 hover:text-white sm:px-4 lg:ml-14 2xl:ml-20 hover:underline decoration-4 decoration-green-700"><a href="#skills">Meine Skills</a></li>
-                    <li class="p-2 hover:text-white sm:px-4 lg:ml-14 2xl:ml-20 hover:underline decoration-4 decoration-green-700"><a href="#contact">Kontakt</a></li>
+                    <li
+                        class="p-2 hover:text-white sm:px-4 lg:ml-22 2xl:ml-96 hover:underline decoration-4 decoration-green-700">
+                        <a href="#aboutMe">About Me</a></li>
+                    <li
+                        class="p-2 hover:text-white sm:px-4 lg:ml-14 2xl:ml-20 hover:underline decoration-4 decoration-green-700">
+                        <a href="#project">Projekte</a></li>
+                    <li
+                        class="p-2 hover:text-white sm:px-4 lg:ml-14 2xl:ml-20 hover:underline decoration-4 decoration-green-700">
+                        <a href="#skills">Meine Skills</a></li>
+                    <li
+                        class="p-2 hover:text-white sm:px-4 lg:ml-14 2xl:ml-20 hover:underline decoration-4 decoration-green-700">
+                        <a href="#contact">Kontakt</a></li>
                     <div class="hidden md:flex w-64 h-12 green ml-auto -mr-4"></div>
                 </ul>
             </div>
@@ -46,20 +54,18 @@
             <div class="w-3/4 p-4 m-auto md:w-1/2 lg:w-1/3 2xl:-ml-60">
                 <div class="">
                     <span class="text-green text-xl">Patrick Marx</span>
-                    <h1 class="text-white font-bold text-2xl sm:text-4xl mt-2">Umschüler zum Fachinformatiker für
-                        Anwendungsentwicklung
-                    </h1>
+                    <h1 class="text-white font-bold text-2xl sm:text-4xl mt-2">Self taught Web Entwickler</h1>
                     <p class="text-white my-6">
                         Ich habe vor einem Jahr mit dem Programmieren angefangen. Anfangs nur mit HTML & CSS,
                         mittlerweile auch
                         mit JavaScript sowie React. Ich versuche viel zu lernen indem ich Projekte erstelle und Websites
                         entwickel.
                     </p>
-                    <p class="text-white">Derzeit bin ich in einer Umschulung zum FIAE bei der WBS Training AG in Kiel.
-                        Ich möchte aber meinen
-                        Umschulungsplatz in eine Betriebliche Umschulung wechseln da ich dort mehr Praktische Erfahrung
-                        erhalten
-                        werde.</p>
+                    <p class="text-white">Derzeit auf der Suche nach einer möglichkeit meine Fähigkeiten zu erweitern
+                        und mit einem Zertifikat zu überzeugen.
+                        Ich möchte an einem Bootcamp teilnehmen an dem ich das Handwerk des Programmierers professionell
+                        erlerne.
+                        Mein Traum ist es meinen Lebensunterhalt als Web-Entwickler zu verdienen. </p>
 
                     <div class="icons">
                         <a href="https://github.com/pmarx92"><i class="bi bi-github"></i></a>
@@ -83,7 +89,8 @@
     <h3 class="text-green text-4xl pl-12 sm:pl-32 md:pl-64 lg:pl-32 xl:pl-80 midnight" id="project">Meine Projekte</h3>
     <section class="flex flex-col lg:flex-row pt-16 text-white relative items-center justify-evenly midnight">
         <div class='flex flex-col items-center lg:ml-16 lg:items-start'>
-          <a href="./SchereSteinPapier/index.html"><img class="w-96 hover:p-2" src="img/Rock_Paper_Scissors.png" alt="me" /></a>
+            <a href="./SchereSteinPapier/index.html"><img class="w-96 hover:p-2" src="img/Rock_Paper_Scissors.png"
+                    alt="me" /></a>
             <div class="p-4">
                 <h2 class="text-green">Schere, Stein, Papier</h2>
                 <h2 class="font-bold text-xl">HTML / CSS, JavaScript</h2>
@@ -121,7 +128,7 @@
 
     <section class="flex flex-col lg:flex-row pt-32 pb-24 text-white relative items-center justify-evenly midnight">
         <div class='flex flex-col items-center lg:ml-16 lg:items-start xl:flex-row lg:items-start'>
-           <a href="./Clock/index.html"><img class="w-96 hover:p-2" src="img/uhr.png" alt="me" /></a>
+            <a href="./Clock/index.html"><img class="w-96 hover:p-2" src="img/uhr.png" alt="me" /></a>
             <div class="p-4">
                 <h2 class="text-green">Uhr</h2>
                 <h2 class="font-bold text-xl">HTML / CSS, JavaScript</h2>
@@ -162,9 +169,7 @@
             <div class="flex flex-col w-96 h-96 midnight p-4 m-2 drop-shadow-2xl hover:bg-gray-800">
                 <h2 class="flex text-center w-full text-3xl justify-center text-green p-4">HTML / CSS</h2>
                 <span><span class="text-green font-bold font-lg">Level:</span> Advanced</span>
-                <p class="mt-6">Die Kombination zwischen HTML & CSS ist für die Webentwicklung natürlich unerlässlich.
-                    Daher benutze ich die Markup Sprache HTML sowie CSS auch schon seitdem ich mich für Webentwicklung
-                    und Programmierung interessiere.</p>
+                <p class="mt-6">Die Kombination zwischen HTML & CSS ist für die Webentwicklung natürlich unerlässlich.</p>
             </div>
             <div class="flex flex-col w-96 h-96 midnight p-4 m-2 drop-shadow-2xl hover:bg-gray-800">
                 <h2 class="flex text-center w-full text-3xl justify-center text-green p-4">Tailwind</h2>
@@ -199,7 +204,8 @@
                 <h2 class="flex w-full text-3xl justify-center text-green mb-4">Sie erreichen mich unter:</h2>
                 <span class="text-center mb-6"><span class="text-green text-center font-bold">Patrick Marx</span></span>
                 <span><span class="text-green font-bold font-lg">Telefon:</span> 0176 6050 9409</span>
-                <span><span class="text-green font-bold font-lg">E-Mail:</span> <a href="mailto:pamarx92@gmail.com" class="hover:text-green-600"> pamarx92@gmail.com</a></span>
+                <span><span class="text-green font-bold font-lg">E-Mail:</span> <a href="mailto:pamarx92@gmail.com"
+                        class="hover:text-green-600"> pamarx92@gmail.com</a></span>
                 <span><span class="text-green font-bold font-lg">Straße:</span> Ostlandstraße 58 </span>
                 <span><span class="text-green font-bold font-lg">Ort:</span> 24340 Eckernförde</span>
             </div>
