--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="w-3/4 p-4 m-auto md:w-1/2 lg:w-1/3 2xl:-ml-60">
                 <div class="">
                     <span class="text-green text-xl">Patrick Marx</span>
-                    <h1 class="text-white font-bold text-2xl sm:text-4xl mt-2">Self taught Web Entwickler</h1>
+                    <h1 class="text-white font-bold text-2xl sm:text-4xl mt-2">Self taught Web Developer</h1>
                     <p class="text-white my-6">
                         Ich habe vor einem Jahr mit dem Programmieren angefangen. Anfangs nur mit HTML & CSS,
                         mittlerweile auch
