--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="font-mono">
-    <header>
+    <nav>
         <div class="container-auto midnight text-lg text-green">
             <div class="sm: ml-0 p-0 lg: p-4 ml-0">
                 <ul class="flex flex-col sm:flex-row font-light">
@@ -33,8 +33,8 @@
                 </ul>
             </div>
         </div>
-    </header>
-
+    </nav>
+<main>
     <section class="flex midnight flex-col 2xl:flex 2xl:flex-row pt-40 pb-96" id="aboutMe">
         <div class="flex flex-col lg:flex-row">
             <div class="hidden md:flex flex-row my-auto">
@@ -54,18 +54,14 @@
             <div class="w-3/4 p-4 m-auto md:w-1/2 lg:w-1/3 2xl:-ml-60">
                 <div class="">
                     <span class="text-green text-xl">Patrick Marx</span>
-                    <h1 class="text-white font-bold text-2xl sm:text-4xl mt-2">Self taught Web Developer</h1>
+                    <h1 class="text-white font-bold text-2xl sm:text-4xl mt-2">Web Development Bootcamp Teilnehmer - <span class="text-green">neue fische</span>
+                    </h1>
                     <p class="text-white my-6">
                         Ich habe vor einem Jahr mit dem Programmieren angefangen. Anfangs nur mit HTML & CSS,
                         mittlerweile auch
-                        mit JavaScript sowie React. Ich versuche viel zu lernen indem ich Projekte erstelle und Websites
-                        entwickel.
+                        mit JavaScript sowie React.
                     </p>
-                    <p class="text-white">Derzeit auf der Suche nach einer möglichkeit meine Fähigkeiten zu erweitern
-                        und mit einem Zertifikat zu überzeugen.
-                        Ich möchte an einem Bootcamp teilnehmen an dem ich das Handwerk des Programmierers professionell
-                        erlerne.
-                        Mein Traum ist es meinen Lebensunterhalt als Web-Entwickler zu verdienen. </p>
+                    <p class="text-white">Ich nehme ab dem 29.08.2022 - 22.11.2022 an einem Bootcamp bei <span class="text-green">neue fische</span> teil. Ich möchte aus meinem Hobby einen Beruf machen und professionell Programmieren lernen um als Web Developer arbeiten zu können.</p>
 
                     <div class="icons">
                         <a href="https://github.com/pmarx92"><i class="bi bi-github"></i></a>
@@ -90,7 +86,7 @@
     <section class="flex flex-col lg:flex-row pt-16 text-white relative items-center justify-evenly midnight">
         <div class='flex flex-col items-center lg:ml-16 lg:items-start'>
             <a href="./SchereSteinPapier/index.html"><img class="w-96 hover:p-2" src="img/Rock_Paper_Scissors.png"
-                    alt="me" /></a>
+                alt="code-preview" /></a>
             <div class="p-4">
                 <h2 class="text-green">Schere, Stein, Papier</h2>
                 <h2 class="font-bold text-xl">HTML / CSS, JavaScript</h2>
@@ -106,7 +102,7 @@
             </div>
         </div>
         <div class='flex flex-col xl:flex-row lg:items-start items-center'>
-            <a href="./BMI Calc/index.html"><img class="w-96 hover:p-2" src="img/bmi.png" alt="me" /></a>
+            <a href="./BMI Calc/index.html"><img class="w-96 hover:p-2" src="img/bmi.png" alt="code-preview" /></a>
             <div class="p-4">
                 <h2 class="text-green">BMI-Rechner</h2>
                 <h2 class="font-bold text-xl">HTML / CSS, JavaScript</h2>
@@ -128,7 +124,7 @@
 
     <section class="flex flex-col lg:flex-row pt-32 pb-24 text-white relative items-center justify-evenly midnight">
         <div class='flex flex-col items-center lg:ml-16 lg:items-start xl:flex-row lg:items-start'>
-            <a href="./Clock/index.html"><img class="w-96 hover:p-2" src="img/uhr.png" alt="me" /></a>
+            <a href="./Clock/index.html"><img class="w-96 hover:p-2" src="img/uhr.png" alt="code-preview" /></a>
             <div class="p-4">
                 <h2 class="text-green">Uhr</h2>
                 <h2 class="font-bold text-xl">HTML / CSS, JavaScript</h2>
@@ -139,7 +135,7 @@
             </div>
         </div>
         <div class='flex flex-col lg:mr-16 lg:items-start items-center'>
-            <a href="./RandomColor/index.html"><img class="w-96 hover:p-2" src="img/color.png" alt="me" /></a>
+            <a href="./RandomColor/index.html"><img class="w-96 hover:p-2" src="img/color.png" alt="code-preview" /></a>
             <div class="p-4 midnight">
                 <h2 class="text-green">Random Color Picker</h2>
                 <h2 class="font-bold text-xl">HTML / CSS, JavaScript</h2>
@@ -169,7 +165,7 @@
             <div class="flex flex-col w-96 h-96 midnight p-4 m-2 drop-shadow-2xl hover:bg-gray-800">
                 <h2 class="flex text-center w-full text-3xl justify-center text-green p-4">HTML / CSS</h2>
                 <span><span class="text-green font-bold font-lg">Level:</span> Advanced</span>
-                <p class="mt-6">Die Kombination zwischen HTML & CSS ist für die Webentwicklung natürlich unerlässlich.</p>
+                <p class="mt-6">Mit HTML & CSS habe ich meine ersten Erfahrungen in der Webentwicklung gemacht. In meinen Projekten kam ich sogut wie nie um HTML & CSS herum.</p>
             </div>
             <div class="flex flex-col w-96 h-96 midnight p-4 m-2 drop-shadow-2xl hover:bg-gray-800">
                 <h2 class="flex text-center w-full text-3xl justify-center text-green p-4">Tailwind</h2>
@@ -182,13 +178,13 @@
             <div class="flex flex-col w-96 h-96 midnight p-4 m-2 hover:bg-gray-800 ">
                 <h2 class="flex text-center w-full text-3xl justify-center text-green p-4">JavaScript</h2>
                 <span><span class="text-green font-bold font-lg">Level:</span> Beginner</span>
-                <p class="mt-6">Ich benutze JavaScript um kleinere Spiele oder App zu Entwickeln. JS ist für mich meine
-                    erste richtige Programmier Sprache die benutze und mit der ich mich verbessern möchte.</p>
+                <p class="mt-6">Ich benutze JavaScript um kleinere Spiele oder App`s zu erstellen. JS ist für mich meine
+                    erste richtige Programmiersprache.</p>
             </div>
             <div class="flex flex-col w-96 h-96 midnight p-4 m-2 drop-shadow-2xl hover:bg-gray-800">
                 <h2 class="flex text-center w-full text-3xl justify-center text-green p-4">React</h2>
                 <span><span class="text-green font-bold font-lg">Level:</span> Beginner</span>
-                <p class="mt-6">React habe ich als JavaScript Framework für mich entdeckt. Mit Componenten eine Webseite
+                <p class="mt-6">React habe ich als JavaScript Framework für mich entdeckt. Mit Komponenten eine Webseite
                     gestalten, genau so stelle ich mir Webentwicklung vor. Daher wird React bei mir auch in Zukunft noch
                     oft Anwendung finden.</p>
             </div>
@@ -197,21 +193,20 @@
             <h2 class="flex text-center w-full text-4xl justify-center text-green" id="contact">Kontakt</h2>
         </div>
     </section>
-
-    <section class="flex flex-col justify-center text-white relative items-center midnight">
+</main>
+    <footer class="flex flex-col justify-center text-white relative items-center midnight">
         <div class="flex flex-col lg:flex-row justify-evenly mt-12 mb-14">
-            <div class="flex flex-col w-full h-18 p-4 m-2">
+            <adress class="flex flex-col w-full h-18 p-4 m-2">
                 <h2 class="flex w-full text-3xl justify-center text-green mb-4">Sie erreichen mich unter:</h2>
-                <span class="text-center mb-6"><span class="text-green text-center font-bold">Patrick Marx</span></span>
-                <span><span class="text-green font-bold font-lg">Telefon:</span> 0176 6050 9409</span>
-                <span><span class="text-green font-bold font-lg">E-Mail:</span> <a href="mailto:pamarx92@gmail.com"
-                        class="hover:text-green-600"> pamarx92@gmail.com</a></span>
-                <span><span class="text-green font-bold font-lg">Straße:</span> Ostlandstraße 58 </span>
-                <span><span class="text-green font-bold font-lg">Ort:</span> 24340 Eckernförde</span>
-            </div>
+                <p class="text-center mb-6"><span class="text-green text-center font-bold">Patrick Marx</span></p>
+                <p><span class="text-green font-bold font-lg">Telefon:</span> 0176 6050 9409</p>
+                <p><span class="text-green font-bold font-lg">E-Mail:</span> pamarx92@gmail.com</p>
+                <p><span class="text-green font-bold font-lg">Straße:</span> Ostlandstraße 58 </p>
+                <p><span class="text-green font-bold font-lg">Ort:</span> 24340 Eckernförde</p>
+            </adress>
         </div>
 
-    </section>
+    </footer>
 
 </body>
 
